--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/text-to-speech": "^5.3.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
