--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@google-cloud/text-to-speech": "^5.3.0",
+    "@prisma/client": "^5.16.1",
     "next": "14.2.4",
+    "prisma": "^5.16.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1"
